<resources>
    <string name="app_name">Sync</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_txt"><b>Help iMusic</b>\nSupport the volunteer for building project</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="app_id">C0868879</string>
    <string name="hideable">hideable</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="tab_text_1">ABOUT</string>
    <string name="tab_text_2">LICENSE</string>
    <string name="aboutTxt1">Sync for Android is a free media player. The player can read most files in storage , help manage playlists and play streams.</string>
    <string name="github_profile">https://github.com/BUSY-LOOPING</string>
    <string name="license_music_indicator">Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.</string>
    <string name="sectioned_recyclerView_adapter_license">Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>


    <string name="audio_visualiser_license">Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.</string>
    <string name="back_to_top_string"><u>Back to the top</u></string>
    <string name="video_mode_title" >Background/PiP mode</string>
    <string name="video_orientation_title" >Video screen orientation</string>
    <string name="checkbox_title" >Playback history</string>
    <string name="history_summary">Save all media played in History section</string>
    <string name="summary_visualiser">Show audio visualiser bars at the bottom</string>
    <string name="summary_auto_skip">Automatically skip to next song after current one\'s completion</string>
    <string name="summary_auto_skip_video">Automatically skip to next video after current one\'s completion</string>
    <string name="lock_with_sensor_summary">When the screen is locked, use the sensor to allow to change orientation</string>
    <string name="volume_gesture_summary">Control volume by gesture during video playback</string>
    <string name="summary_resume_playback">Resume playback from previously left position</string>
</resources>