<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout_width="wrap_content"
        app:title="Video">

        <ListPreference
            app:defaultValue="2"
            app:entries="@array/video_mode"
            app:entryValues="@array/video_mode_value"
            app:key="video_mode"
            app:title="@string/video_mode_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="1"
            app:entries="@array/video_orientation"
            app:entryValues="@array/video_orientation_value"
            app:key="video_orientation"
            app:title="@string/video_orientation_title"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:summary="@string/lock_with_sensor_summary"
            app:key="lock_with_sensor"
            app:title="Lock with sensor" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:summary="@string/volume_gesture_summary"
            app:key="volume_gesture"
            app:title="Volume gesture" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:summary="@string/lock_with_sensor_summary"
            app:key="brightness_gesture"
            app:title="Brightness gesture" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:summary="@string/summary_resume_playback"
            app:key="resume_playback"
            app:title="Resume playback" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:summary="@string/summary_auto_skip_video"
            app:key="auto_skip_video"
            app:title="Next Video" />

        <ListPreference
            app:defaultValue="3"
            app:entries="@array/auto_hide"
            app:entryValues="@array/auto_hide_value"
            app:key="control_hide_delay"
            app:title="Video player controls hiding delay"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="History">

        <CheckBoxPreference
            android:key="history"
            android:title="@string/checkbox_title"
            app:defaultValue="true"
            app:summary="@string/history_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Music">

        <CheckBoxPreference
            app:defaultValue="true"
            app:summary="@string/summary_visualiser"
            app:key="show_visualiser"
            app:title="Visualiser Bars" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:summary="@string/summary_auto_skip"
            app:key="auto_skip"
            app:title="Next Song" />

    </PreferenceCategory>

</PreferenceScreen>