<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_color"
    tools:context="com.sync.imusic.AboutPackage.LicenseFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#323232">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:text="Sync for Android"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="License"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/musicIndicatorLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="MusicIndicator"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/license_music_indicator"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/back_to_top1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/back_to_top_string"
                android:textColor="@color/av_orange"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/sectionedRecyclerViewAdapterLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="SectionedRecyclerViewAdapter"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sectioned_recyclerView_adapter_license"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/back_to_top2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/back_to_top_string"
                android:textColor="@color/av_orange"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/audioVisualiserLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="Audio Visualiser"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/audio_visualiser_license"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/back_to_top3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/back_to_top_string"
                android:textColor="@color/av_orange"
                android:textSize="18sp"
                android:textStyle="normal" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>